--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <!-- Main CSS -->
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="face.css">
+  <link rel="stylesheet" href="AI.css">
+
 
   <!-- WinBox.js -->
   <script src="https://rawcdn.githack.com/nextapps-de/winbox/0.2.82/dist/winbox.bundle.min.js"></script>
@@ -15,6 +17,7 @@
   <script defer src="script.js"></script>
 
   <!-- Each agent in its own file -->
+  <script defer src="hc.js"></script>
   <script defer src="cultural.js"></script>
   <script defer src="phonology.js"></script>
   <script defer src="grammar.js"></script>
@@ -29,7 +32,7 @@
   <script src="glyphAPI.js"></script>
   <script src="scriptPresets.js"></script>
   <script src="faceAPI.js"></script>
-
+  <script defer src="ai_integrator.js"></script>
 
 
 
@@ -71,6 +74,11 @@
       <span class="iconify" data-icon="mdi:cog-outline"></span> Settings
     </button>
   </main>
+ 
+
+   
+
+ 
 </body>
 </html>
 
